Agent query: Could you check if the report page now shows all vehicles and their associated users when logged in as admin, and only shows personal vehicles when logged in as a regular user?
Enhance report page to display all user check-in/check-out records for admins, and only user's own records for regular users.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/832f2abc-4378-444e-b826-5fcb9ec6f866/781e01a4-c615-4660-92aa-e22f737f6cba.jpg

--- a/templates/report.html
+++ b/templates/report.html
@@ -19,6 +19,9 @@
                     <table class="table table-hover">
                         <thead>
                             <tr>
+                                {% if is_admin %}
+                                <th>Recorded By</th>
+                                {% endif %}
                                 <th>Vehicle Information</th>
                                 <th>Driver Information</th>
                                 <th>Check-in Time (EAT)</th>
@@ -30,6 +33,12 @@
                         <tbody>
                             {% for vehicle in vehicles %}
                             <tr>
+                                {% if is_admin %}
+                                <td>
+                                    <strong>{{ vehicle.user.username }}</strong><br>
+                                    <small class="text-muted">{{ vehicle.user.email }}</small>
+                                </td>
+                                {% endif %}
                                 <td>
                                     <i class="fas fa-{% if vehicle.vehicle_type == 'motorcycle' %}motorcycle{% elif vehicle.vehicle_type == 'bajaj' %}taxi{% else %}car{% endif %} me-2"></i>
                                     <span class="text-capitalize">{{ vehicle.vehicle_type }}</span><br>
